Розширити контракт перекладу: source_language, мови сусідів України, документація і тести
